--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION_URI=postgres://infisical:infisical@localhost/infisical?sslmode=disable
+DB_CONNECTION_URI=postgres://symph:symph@localhost:5432/symph?sslmode=disable
