--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,6 +21,12 @@
       "@app/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*", "scripts/**/*", "e2e-test/**/*", "./.eslintrc.js", "./tsup.config.js"],
+  "include": [
+    "src/**/*",
+    "scripts/**/*",
+    "e2e-test/**/*",
+    "./.eslintrc.js",
+    "./tsup.config.js"
+  ],
   "exclude": ["node_modules"]
 }
