--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.9.0",
-    "check-valid-url": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.2"
+    "react-router": "^7.1.2",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/validator": "^13.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
