added password reset email

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
 DB_CONNECTION_URI=postgres://symph:symph@localhost/symph?sslmode=disable
+
+# Application settings
+NODE_ENV=development
+CLIENT_URL=http://localhost:3000
+JWT_SECRET=shortly-secret-key
+
+# SMTP settings
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=noreply@shortly.com
