--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,15 @@
 DB_CONNECTION_URI=postgres://symph:symph@localhost:5432/symph?sslmode=disable
 PORT=8000
 CLIENT_URL=http://localhost:3000
+
+# Application settings
+NODE_ENV=development
+JWT_SECRET=shortly-secret-key
+
+# SMTP settings for development (MailHog)
+SMTP_HOST=smtp-server
+SMTP_PORT=1025
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=noreply@shortly.com
