--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -30,12 +31,14 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "pg": "^8.2.0",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
+    "@types/validator": "^13.15.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
