--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.2",
     "validator": "^13.15.0"
