--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 DB_CONNECTION_URI=postgres://symph:symph@localhost/symph?sslmode=disable
 
+# Redis settings
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_URL=redis://localhost:6379
+REDIS_TTL=3600
+
 # Application settings
 NODE_ENV=development
 CLIENT_URL=http://localhost:3000
