--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,13 @@ DB_CONNECTION_URI=postgres://symph:symph@localhost:5432/symph?sslmode=disable
 PORT=8000
 CLIENT_URL=http://localhost:3000
 
+# Redis settings
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_URL=redis://localhost:6379
+REDIS_TTL=3600
+
 # Application settings
 NODE_ENV=development
 JWT_SECRET=shortly-secret-key
