--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.17",
+    "@types/redis": "^4.0.11",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -34,7 +35,8 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "pg": "^8.2.0",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "redis": "^4.7.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
